correção email composer

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "autors":[
     	{
     		"name":"Talianderson Dias",
-    		"email":"tlaianderson.web@gmail.com"
+    		"email":"talianderson.web@gmail.com"
     	}
     ],
     "minimum-stability": "dev",
